tests/snapshots/test_runner__tests__compiler__typecheck__monadic_let_record_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f = | x =>
  let {a} = x
  a

let result: String = {a: 2}.f()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/monadic_let_record_1.kk:5:22
  │
5 │ let result: String = {a: 2}.f()
  │                      ^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Integer   |
    +---------------+-------------+
